project four: Add new media queries and fix margin alignment issues

--- a/brainstation/web-dev-ft/ft-course/week-4/project/css/style.scss
+++ b/brainstation/web-dev-ft/ft-course/week-4/project/css/style.scss
@@ -243,7 +243,10 @@ table {
 
         }
         .shows {
-            @include showsContainer();            
+            @include showsContainer();
+            @media (max-width: $mobile-max-width-small) {
+                width: 90%; 
+            }                       
             
             .shows__table {
                 @include showsTable();
